@@ -12,9 +12,11 @@ Summary of important user-visible changes for statistics 1.2.0:
  ** `kmeans' has been fixed to deal with clusters that contain only
     one element.
 
- ** `normplot' has been fixed to avoid use of functions that are have been
+ ** `normplot' has been fixed to avoid use of functions that have been
     removed from Octave core. Also, the plot produced should now display some
     aesthetic elements and appropriate legends.
+
+ ** The help text of `mvtrnd' has been improved.
 
 Summary of important user-visible changes for statistics 1.1.3:
 -------------------------------------------------------------------
